--- a/back-end/usuarios/templates/usuarios/cadastro.html
+++ b/back-end/usuarios/templates/usuarios/cadastro.html
@@ -23,7 +23,8 @@
             <button type="submit">Cadastrar</button>
         </form>
 
-        <p>Já tem uma conta? <a href="index.html">Faça login</a></p>
+        <p>Já tem uma conta? <a href="{% url 'login' %}">Faça login</a></p>
+
     </div>
     <footer>
         <p>&copy; 2023 Stonks Viewer. Todos os direitos reservados.</p>
