--- a/back-end/usuarios/templates/usuarios/perfil.html
+++ b/back-end/usuarios/templates/usuarios/perfil.html
@@ -31,7 +31,7 @@
           <li><a href="#recent-transactions">Últimas movimentações</a></li>
           <li><a href="#metas-financeiras">Metas</a></li>
           <li><a href="#adicionar-lembrete">Lembretes</a></li>
-          <li><a href="index.html">Sair</a></li>
+          <li><a href="{% url 'sair' %}">Sair</a></li>
         </ul>
       </nav>
 
