ajeitando as gambiarras de quasia

--- a/back-end/usuarios/templates/usuarios/sobre.html
+++ b/back-end/usuarios/templates/usuarios/sobre.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StonksViewer</title>
-    <link rel="stylesheet" href="sobre.css">
-    <link rel="icon" href="../docs/imagens/cofrinho.png" type="image/png" sizes="180x180">
+    <link rel="stylesheet" href="../../static/usuarios/sobre.css">
+    <link rel="icon" href="../../../../docs/imagens/cofrinho.png" type="image/png" sizes="180x180">
 </head>
 <body>
   <div class="conteudo-sobre">
@@ -32,23 +32,23 @@
     <p>Nosso time é composto por desenvolvedores dedicados que trabalham continuamente para melhorar a experiência do usuário e adicionar novas funcionalidades ao Stonks Viewer.</p>
     <div class="fotos-equipe">
         <div class="membro-equipe">
-            <img src="../docs/imagens/imagens-equipe/lucasmendes.png" alt="Membro 1">
+            <img src="../../../../docs/imagens/imagens-equipe/lucasmendes.png" alt="Membro 1">
             <p>Lucas Mendes</p>
         </div>
         <div class="membro-equipe">
-            <img src="../docs/imagens/imagens-equipe/quezia.png" alt="Membro 2">
+            <img src="../../../../docs/imagens/imagens-equipe/quezia.png" alt="Membro 2">
             <p>Quezia Costa</p>
         </div>
         <div class="membro-equipe">
-            <img src="../docs/imagens/imagens-equipe/arthur.png" alt="Membro 3">
+            <img src="../../../../docs/imagens/imagens-equipe/arthur.png" alt="Membro 3">
             <p>Arthur Amaral</p>
         </div>
         <div class="membro-equipe">
-            <img src="../docs/imagens/imagens-equipe/fernandes.png" alt="Membro 4">
+            <img src="../../../../docs/imagens/imagens-equipe/fernandes.png" alt="Membro 4">
             <p>Lucas Fernandes</p>
         </div>
         <div class="membro-equipe">
-            <img src="../docs/imagens/imagens-equipe/manu.png" alt="Membro 5">
+            <img src="../../../../docs/imagens/imagens-equipe/manu.png" alt="Membro 5">
             <p>Manuela Silveira</p>
         </div>
     </div>
