--- a/back-end/usuarios/templates/usuarios/recuperar.html
+++ b/back-end/usuarios/templates/usuarios/recuperar.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="recuperar.css">
+    <link rel="stylesheet" href="{% static 'usuarios/recuperar.css' %}">
     <link rel="icon" href="../docs/imagens/cofrinho.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StonksViewer</title>
@@ -12,11 +13,12 @@
         <h2>Recuperar Senha</h2>
         <p>Insira seu e-mail para receber as instruções de recuperação de senha.</p>
         <br>
-        <form action="index.html" method="GET">
+        <form action="{% url 'recuperar' %}" method="POST">
+            {% csrf_token %}
             <input type="email" name="email" placeholder="insira o email" required>
             <button type="submit">recuperar</button>
         </form>
-        <p>Já tem uma conta? <a href="index.html">Faça login</a></p>
+        <p>Já tem uma conta? <a href="{% url 'login' %}">Faça login</a></p>
     </div>
 
 </body>
