--- a/back-end/usuarios/templates/usuarios/perfil.html
+++ b/back-end/usuarios/templates/usuarios/perfil.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" href="{% static 'usuarios/cofrinho.png' %}" type="image/png" />
+  <link rel="icon" href="{% static 'usuarios/imagens/cofrinho.png' %}" type="image/png" sizes="180x180">
+
   <title>Stonks Viewer</title>
   <link rel="stylesheet" href="{% static 'usuarios/perfil.css' %}" />
 </head>
