--- a/back-end/usuarios/templates/usuarios/recuperar.html
+++ b/back-end/usuarios/templates/usuarios/recuperar.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="{% static 'usuarios/recuperar.css' %}">
-    <link rel="icon" href="../docs/imagens/cofrinho.png" type="image/png">
+    <link rel="icon" href="{% static 'usuarios/imagens/cofrinho.png' %}" type="image/png" sizes="180x180">
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StonksViewer</title>
 </head>
